RSRVR-19 build reachability-metadata.json in a test