@@ -216,6 +216,7 @@
           <archive>
             <manifestEntries>
               <Automatic-Module-Name>com.indexdata.reservoir.server</Automatic-Module-Name>
+              <Main-Verticle>${vertx.verticle}</Main-Verticle>
             </manifestEntries>
           </archive>
         </configuration>
@@ -286,6 +287,18 @@
       <id>native</id>
       <build>
         <plugins>
+          <!-- testing in native profile to create reachability-metadata.json -->
+          <!-- https://maven.apache.org/surefire/maven-surefire-plugin/test-mojo.html -->
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <skipTests>false</skipTests>
+              <argLine>-agentlib:native-image-agent=config-output-dir=target/classes/META-INF/native-image
+                --sun-misc-unsafe-memory-access=allow --enable-native-access=ALL-UNNAMED
+              </argLine>
+            </configuration>
+          </plugin>
           <plugin>
             <groupId>org.graalvm.buildtools</groupId>
             <artifactId>native-maven-plugin</artifactId>
